--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -12,6 +12,7 @@ body {
 }
 .wrapper {
     font-family: "Gilroy";
+    overflow: hidden;
 }
 .container {
     max-width: 1170px;
@@ -36,9 +37,27 @@ body {
     font-size: 12px;
     /* animation */
     transition: opacity .25s ease;
+    cursor: pointer;
     &:hover {
         opacity: 0.5;
     }
+    &.adaptive {
+        @media(max-width: 767px) {
+            max-width: 100%;
+            width: 100%;
+        }
+    }
+}
+.input-tel {
+    background-color: #ffffff;
+    border: 1px solid #e8e8e8;
+    border-radius: 28px;
+    width: 225px;
+    height: 55px;
+    font-size: 13px;
+    font-weight: 300;
+    padding: 0 28px;
+    text-align: center;
 }
 /* content */
 .header {
@@ -51,27 +70,16 @@ body {
             align-items: center;
         }
     }
-    &__col {
+
+    &__left {
         display: flex;
         align-items: center;
-        &:first-child {
-            @media(max-width: 925px) {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-            @media(max-width: 424px) {
-                align-items: center;
-            }
+        @media(max-width: 925px) {
+            flex-direction: column;
+            align-items: flex-start;
         }
-        &:last-child {
-            @media(max-width: 654px) {
-                flex-direction: column;
-                align-items: flex-end;
-                justify-content: space-between;
-            }
-            @media(max-width: 424px) {
-                align-items: center;
-            }
+        @media(max-width: 424px) {
+            align-items: center;
         }
     }
 
@@ -107,6 +115,19 @@ body {
         }
         @media(max-width: 424px) {
             margin: 0 0 10px 0;
+        }
+    }
+
+    &__right {
+        display: flex;
+        align-items: center;
+        @media(max-width: 654px) {
+            flex-direction: column;
+            align-items: flex-end;
+            justify-content: space-between;
+        }
+        @media(max-width: 424px) {
+            align-items: center;
         }
     }
 
@@ -175,15 +196,14 @@ body {
     }
 
     &__slider {
-
+        position: relative;
     }
 
     .slider {
-        position: relative;
         .owl-nav {
             position: absolute;
-            width: 60%;
-            left: 20%;
+            width: 66%;
+            left: 17%;
             margin: 0;
             top: calc(50% - 13px);
             display: flex;
@@ -213,6 +233,7 @@ body {
             .owl-dot {
                 span {
                     background-color: #cccccc;
+                    margin: 0 5px;
                 }
                 &:hover {
                     span {
@@ -254,6 +275,188 @@ body {
         position: absolute;
         bottom: 0;
         left: 0;
+    }
+}
+
+.instruction {
+    position: relative;
+    .container {
+        display: flex;
+        padding: 100px 15px;
+        align-items: center;
+        @media(max-width: 992px) {
+            justify-content: space-between;
+        }
+        @media(max-width: 767px) {
+            flex-direction: column;
+        }
+    }
+
+    &__left {
+        margin: 0 58px 30px 97px;
+        @media(max-width: 992px) {
+            margin: 0 30px 0 0;
+        }
+        @media(max-width: 767px) {
+            margin: 0 0 50px 0;
+        }
+    }
+
+    &__title {
+        font-size: 40px;
+        font-family: "Chift Display";
+        text-transform: uppercase;
+        font-weight: 700;
+        line-height: 40px;
+        margin: 0 0 87px 0;
+        max-width: 400px;
+        z-index: 1;
+        @media(max-width: 767px) {
+            text-align: center;
+            max-width: 100%;
+        }
+    }
+
+    &__text {
+        max-width: 320px;
+        font-size: 20px;
+        line-height: 27px;
+        font-family: "Playfair Display";
+        font-style: italic;
+        position: relative;
+        z-index: 1;
+        @media(max-width: 992px) {
+            margin: 0 0 0 57px;
+        }
+        @media(max-width: 767px) {
+            max-width: 100%;
+        }
+        span {
+            font-weight: 700;
+        }
+        &:before {
+            content: "";
+            position: absolute;
+            width: 90px;
+            height: 87px;
+            background: url("images/instruction/01.png") 50% 50% no-repeat;
+            top: -47px;
+            left: -57px;
+            z-index: -1;
+        }
+    }
+
+    &__right {
+        max-width: 421px;
+        width: 100%;
+        @media(max-width: 767px) {
+            max-width: 100%;
+        }
+    }
+
+    &__form {
+        border: 8px solid #3a5896;
+        max-width: 421px;
+        height: 410px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 15px;
+        @media(max-width: 767px) {
+            max-width: 100%;
+        }
+    }
+
+    .form {
+
+        &__title {
+            font-family: "Playfair Display";
+            font-size: 22px;
+            font-weight: 700;
+            max-width: 265px;
+            margin: 0 0 20px 0;
+            z-index: 1;
+        }
+    
+        &__text {
+            font-family: "Playfair Display";
+            font-size: 16px;
+            font-style: italic;
+            margin: 0 0 30px 0;
+            z-index: 1;
+        }
+    
+        &__tel {
+            margin: 0 0 15px 0;
+            z-index: 1;
+            @media(max-width: 767px) {
+                width: 100%;
+            }
+        }
+    
+        &__button-back-call {
+            margin: 0 0 30px 0;
+            max-width: 225px;
+            width: 100%;
+            height: 55px;
+            border-radius: 28px;
+            font-size: 14px;
+            z-index: 1;
+            @media(max-width: 767px) {
+                max-width: 100%;
+                width: 100%;
+            }
+        }
+    
+        &__text-we {
+            font-size: 13px;
+            font-weight: 300;
+            margin: 0 0 15px 0;
+            z-index: 1;
+        }
+    
+        &__checkbox-container {
+            display: flex;
+            align-items: center;
+            z-index: 1;
+            input {
+                margin: 0 8px 0 0;
+            }
+            span {
+                font-size: 11px;
+                color: #999999;
+                @media(max-width: 767px) {
+                    text-align: left;
+                }
+                a {
+                    text-decoration: underline;
+                    color: #999999;
+                }
+            }
+        }
+    }
+
+    &__abs-image {
+        position: absolute;
+        @media(max-width: 767px) {
+            display: none;
+        }
+        &.image-1 {
+            bottom: -217px;
+            left: calc(50% - 328px);
+        }
+        &.image-2 {
+            top: -385px;
+            right: -217px;
+            @media(max-width: 1659px) {
+                right: -400px;
+            }
+            @media(max-width: 1279px) {
+                right: -500px;
+            }
+        }
     }
 }
 
