--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -34,7 +34,7 @@ body {
     font-weight: 700;
     line-height: 43px;
     font-style: italic;
-    text-align: center; 
+    text-align: center;
 }
 .button-back-call {
     box-shadow: 0 5px 13px rgba(228, 4, 4, 0.3);
@@ -43,6 +43,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 0 35px;
+    text-align: center;
     /* text style */
     color: #ffffff !important;
     font-size: 12px;
@@ -669,6 +670,270 @@ body {
         line-height: 20px;
     }
 }
+
+.proc {
+    position: relative;
+    .container {
+        padding: 100px 15px;
+    }
+    &__title {
+        margin: 0 0 19px 0;
+        z-index: 1;
+        position: relative;
+    }
+
+    &__subtitle {
+        margin: 0 auto 92px auto;
+        max-width: 521px;
+        z-index: 1;
+        position: relative;
+    }
+
+    &__dots-container {
+        display: flex;
+        justify-content: center;
+        margin: 0 0 86px 0;
+        @media(max-width: 559px) {
+            margin: 0 0 40px 0;
+        }
+    }
+
+    &__dots {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: -30px -62px;
+        max-width: 876px;
+        @media(max-width: 767px) {
+            margin: -15px -25px;
+        }
+        @media(max-width: 559px) {
+            margin: -15px;
+        }
+    }
+
+    &__dot {
+        width: 95px;
+        height: 95px;
+        background-color: #3a5896;
+        margin: 30px 62px;
+        cursor: pointer;
+        border-radius: 50%;
+        transition: opacity .25s ease,
+        background-color .25s ease;
+        position: relative;
+        @media(max-width: 767px) {
+            margin: 15px 25px;
+        }
+        @media(max-width: 559px) {
+            width: 40px;
+            height: 40px;
+            margin: 15px;
+        }
+        &:hover {
+            opacity: 0.5;
+        }
+        &.active {
+            background-color: #ff0c0a;
+            &:hover {
+                opacity: 1;
+            }
+        }
+        &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            @media(max-width: 559px) {
+                background-size: contain !important;
+            }
+        }
+        &-1:after {
+            background: url("images/proc/01.png") no-repeat;
+            width: 98px;
+            height: 113px;
+            top: -12px;
+            left: -10px;
+            @media(max-width: 559px) {
+                width: 40px;
+                left: -5px;
+                top: -6px;
+            }
+        }
+        &-2:after {
+            background: url("images/proc/02.png") no-repeat;
+            width: 90px;
+            height: 92px;
+            top: 3px;
+            left: -1px;
+            @media(max-width: 559px) {
+                width: 38px;
+                top: 1px;
+                left: -2px;
+            }
+        }
+        &-3:after {
+            background: url("images/proc/03.png") no-repeat;
+            width: 108px;
+            height: 103px;
+            top: 2px;
+            left: -19px;
+            @media(max-width: 559px) {
+                width: 45px;
+                top: 1px;
+                left: -9px;
+            }
+        }
+        &-4:after {
+            background: url("images/proc/04.png") no-repeat;
+            width: 89px;
+            height: 102px;
+            top: -1px;
+            left: 0;
+            @media(max-width: 559px) {
+                width: 38px;
+                top: 0;
+            }
+        }
+        &-5:after {
+            background: url("images/proc/05.png") no-repeat;
+            width: 104px;
+            height: 97px;
+            top: 5px;
+            left: -15px;
+            @media(max-width: 559px) {
+                width: 44px;
+                top: 2px;
+                left: -7px;
+            }
+        }
+        &-6:after {
+            background: url("images/proc/06.png") no-repeat;
+            width: 82px;
+            height: 87px;
+            top: 10px;
+            left: 2px;
+            @media(max-width: 559px) {
+                width: 35px;
+                top: 4px;
+                left: 1px;
+            }
+        }
+        &-7:after {
+            background: url("images/proc/07.png") no-repeat;
+            width: 116px;
+            height: 77px;
+            top: 24px;
+            left: -19px;
+            @media(max-width: 559px) {
+                width: 46px;
+                top: 10px;
+                left: -5px;
+            }
+        }
+        &-8:after {
+            background: url("images/proc/08.png") no-repeat;
+            width: 86px;
+            height: 95px;
+            top: 3px;
+            left: 8px;
+            @media(max-width: 559px) {
+                width: 36px;
+                top: 1px;
+                left: 4px;
+            }
+        }
+    }
+
+    &__slider {
+        margin: 0 0 12px 0;
+    }
+
+    .slider {
+        .owl-nav {
+            position: absolute;
+            width: 100%;
+            left: 0;
+            margin: 0;
+            top: calc(50% - 42px);
+            display: flex;
+            justify-content: space-between;
+            @media(max-width: 767px) {
+                display: none;
+            }
+            .owl-prev, .owl-next {
+                margin: 0;
+                width: 21px;
+                height: 40px;
+                transition: opacity .25 ease;
+                &:hover {
+                    opacity: 0.5;
+                }
+            }
+            .owl-prev {
+                background: url("images/!slider/left2.png") 50% 50% no-repeat !important;
+            }
+            .owl-next {
+                background: url("images/!slider/right2.png") 50% 50% no-repeat !important;
+            }
+        }
+
+        &__item {
+        }
+    
+        &__title {
+            font-family: "Playfair Display";
+            font-size: 28px;
+            font-weight: 700;
+            font-style: italic;
+            text-align: center;
+            max-width: 765px;
+            margin: 0 auto 45px auto;
+        }
+    
+        &__text {
+            font-size: 20px;
+            font-weight: 300;
+            line-height: 29px;
+            max-width: 739px;
+            text-align: center;
+            margin: 0 auto 45px auto;
+        }
+    }
+
+    &__button-back-call {
+        max-width: 300px;
+        height: 65px;
+        border-radius: 33px;
+        font-size: 14px;
+        margin: 0 auto;
+        @media(max-width: 767px) {
+            max-width: 100%;
+        }
+    }
+
+    &__abs-image {
+        position: absolute;
+        top: -117px;
+        left: 1px;
+        @media(max-width: 1539px) {
+            top: -100px;
+        }
+        @media(max-width: 1447px) {
+            left: -100px;
+        }
+        @media(max-width: 1247px) {
+            left: -200px;
+        }
+        @media(max-width: 1047px) {
+            width: 360px;
+            left: -150px;
+        }
+        @media(max-width: 767px) {
+            display: none;
+        }
+    }
+}
+
 /* fixed */
 .fixed-pulse {
     background-color: #4fbaea;
