--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -159,6 +159,12 @@ body {
         }
     }
 }
+.owl-stage-outer {
+    z-index: 1;
+}
+.owl-prev, .owl-next {
+    z-index: 1;
+}
 /* content */
 .header {
     .container {
@@ -309,7 +315,8 @@ body {
             display: flex;
             justify-content: space-between;
             @media(max-width: 767px) {
-                display: none;
+                width: 100%;
+                left: 0;
             }
             .owl-prev, .owl-next {
                 width: 15px;
@@ -857,9 +864,6 @@ body {
             top: calc(50% - 42px);
             display: flex;
             justify-content: space-between;
-            @media(max-width: 767px) {
-                display: none;
-            }
             .owl-prev, .owl-next {
                 margin: 0;
                 width: 21px;
@@ -934,6 +938,100 @@ body {
     }
 }
 
+.exp {
+    position: relative;
+    background-color: #f5f5f5;
+    .container {
+        padding: 100px 15px;
+    }
+    &__title {
+        margin: 0 0 12px 0;
+        z-index: 1;
+        position: relative;
+    }
+
+    &__subtitle {
+        margin: 0 0 76px 0;
+        z-index: 1;
+        position: relative;
+    }
+
+    &__slider {
+        max-width: 882px;
+    }
+
+    .slider {
+        margin: 0 auto;
+        .owl-nav {
+            position: absolute;
+            width: calc(100% + 256px);
+            left: -128px;
+            margin: 0;
+            top: calc(50% - 20px);
+            display: flex;
+            justify-content: space-between;
+            @media(max-width: 1169px) {
+                width: calc(100% + 80px);
+                left: -40px;
+            }
+            @media(max-width: 994px) {
+                width: 100%;
+                left: 0;
+            }
+            .owl-prev, .owl-next {
+                margin: 0;
+                width: 21px;
+                height: 40px;
+                transition: opacity .25 ease;
+                &:hover {
+                    opacity: 0.5;
+                }
+            }
+            .owl-prev {
+                background: url("images/!slider/left2.png") 50% 50% no-repeat !important;
+            }
+            .owl-next {
+                background: url("images/!slider/right2.png") 50% 50% no-repeat !important;
+            }
+        }
+        &__item {
+            height: 350px;
+            position: relative;
+            display: block;
+            &:before {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background: url("images/exp/icon.png") 50% 50% no-repeat, #3a5996c9;
+                opacity: 0;
+                transition: opacity .25s ease;
+                z-index: 2;
+            }
+            &:hover {
+                &:before {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+
+    &__abs-image {
+        position: absolute;
+        top: -121px;
+        right: 211px;
+        @media(max-width: 1384px) {
+            right: 50px;
+        }
+        @media(max-width: 1023px) {
+            right: -60px;
+        }
+        @media(max-width: 767px) {
+            display: none;
+        }
+    }
+}
 /* fixed */
 .fixed-pulse {
     background-color: #4fbaea;
