--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -113,6 +113,7 @@ body {
     &__tel {
         margin: 0 0 15px 0;
         z-index: 1;
+        min-width: 225px;
         @media(max-width: 767px) {
             width: 100%;
         }
@@ -1025,6 +1026,71 @@ body {
         }
         @media(max-width: 1023px) {
             right: -60px;
+        }
+        @media(max-width: 767px) {
+            display: none;
+        }
+    }
+}
+
+.ensure {
+    position: relative;
+    .container {
+        padding: 100px 15px;
+    }
+    &__title {
+        margin: 0 0 65px 0;
+    }
+
+    &__form {
+        max-width: 810px;
+        margin: 0 auto;
+    }
+
+    .form {
+
+        &__title {
+            max-width: 100%;
+        }
+    
+        &__text {
+        }
+    
+        &__input-container {
+        }
+    
+        &__tel {
+            margin: 0 30px 0 0;
+            @media(max-width: 767px) {
+                margin: 0 0 15px 0;
+            }
+        }
+        &__button-back-call {
+            
+        }
+    
+        &__text-we {
+        }
+    
+        &__checkbox-container {
+        }
+    }
+
+    &__abs-image {
+        position: absolute;
+        bottom: 0;
+        right: 283px;
+        @media(max-width: 1637px) {
+            right: 120px;
+        }
+        @media(max-width: 1319px) {
+            right: 0;
+        }
+        @media(max-width: 1085px) {
+            width: 350px;
+        }
+        @media(max-width: 889px) {
+            right: -90px;
         }
         @media(max-width: 767px) {
             display: none;
