--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -1097,6 +1097,72 @@ body {
         }
     }
 }
+
+.find {
+    position: relative;
+    height: 536px;
+    @media(max-width: 767px) {
+        height: auto;
+    }
+    .container {
+        max-width: 615px;
+        padding: 79px 0 0 0;
+        height: 408px;
+        z-index: 1;
+        position: relative;
+        background: url("images/find/01.png") 50% 0 no-repeat;
+        text-align: center;
+        @media(max-width: 767px) {
+            padding: 30px 15px;
+            height: auto;
+            background-image: none;
+            background-color: #3a5896;
+            color: #fff;
+            max-width: 100%;
+        }
+    }
+    
+    &__title {
+        font-family: "Playfair Display";
+        font-style: italic;
+        max-width: 249px;
+        margin: 0 auto 35px auto;
+        font-size: 22px;
+        color: #3a5896;
+        font-weight: 700;
+        line-height: 29px;
+        @media(max-width: 767px) {
+            color: #fff;
+        }
+    }
+
+    &__address {
+        max-width: 249px;
+        margin: 0 auto 22px auto;
+        font-size: 16px;
+    }
+
+    &__phone {
+        max-width: 249px;
+        margin: 0 auto 22px auto;
+        font-weight: 500;
+    }
+
+    p:last-child {
+        margin: 0 auto;
+    }
+
+    &__google-map {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        @media(max-width: 767px) {
+            position: static;
+            height: 400px;
+        }
+    }
+}
 /* fixed */
 .fixed-pulse {
     background-color: #4fbaea;
