--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -1133,6 +1133,7 @@ body {
         line-height: 29px;
         @media(max-width: 767px) {
             color: #fff;
+            max-width: 100%;
         }
     }
 
@@ -1140,12 +1141,18 @@ body {
         max-width: 249px;
         margin: 0 auto 22px auto;
         font-size: 16px;
+        @media(max-width: 767px) {
+            max-width: 100%;
+        }
     }
 
     &__phone {
         max-width: 249px;
         margin: 0 auto 22px auto;
         font-weight: 500;
+        @media(max-width: 767px) {
+            max-width: 100%;
+        }
     }
 
     p:last-child {
