--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -1236,6 +1236,62 @@ body {
         }
     }    
 }
+
+.footer {
+    @media(max-width: 767px) {
+        background-color: #f5f5f5;
+    }
+    .container {
+        padding: 30px 15px;
+        max-width: 831px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        @media(max-width: 589px) {
+            flex-direction: column;
+        }
+    }
+    
+    &__req {
+        max-width: 138px;
+        font-weight: 300;
+        @media(max-width: 589px) {
+            order: 2;
+            max-width: 100%;
+        }
+    }
+
+    &__logo {
+        display: flex;
+        align-items: center;
+        @media(max-width: 589px) {
+            order: 0;
+            margin: 0 0 10px 0;
+        }
+    }
+
+    &__img {
+        margin: 0 14px 0 0;
+    }
+
+    &__name {
+        font-family: "Playfair Display";
+        font-size: 15px;
+        font-weight: 700;
+        line-height: 20px;
+        text-transform: uppercase;
+    }
+
+    &__phone {
+        font-size: 18px;
+        font-weight: 700;
+        font-family: "Chift Display";
+        @media(max-width: 589px) {
+            order: 1;
+            margin: 0 0 10px 0;
+        }
+    }
+}
 /* fixed */
 .fixed-pulse {
     background-color: #4fbaea;
