--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -1295,7 +1295,7 @@ body {
 }
 /* fixed */
 .fixed-pulse {
-    background-color: #4fbaea;
+    background-color: #ff0909;
     border-radius: 50%;
     width: 100px;
     height: 100px;
@@ -1313,7 +1313,7 @@ body {
         display: block;
         position: absolute;
         border: 50%;
-        border: 1px solid #4fbaea;
+        border: 1px solid #ff0909;
         left: -20px;
         right: -20px;
         top: -20px;
@@ -1363,6 +1363,57 @@ body {
 .popup {
     display: none;
 }
-.fancybox-close-small {
-    display: none;
+.popup {
+
+	&__title {
+        margin: 0 0 15px 0;
+        font-size: 30px;
+    }
+    
+	&__text {
+        font-family: "Gilroy";
+        text-align: center;
+        margin: 0 0 30px 0;
+    }
+    
+	&__form {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+	&__tel {
+        font-family: "Gilroy";
+        width: 100%;
+        margin: 0 0 10px 0;
+    }
+    
+	&__submit {
+        font-family: "Gilroy";
+        width: 100%;
+        height: 55px;
+        font-size: 20px;
+        border-radius: 28px;
+        margin: 0 0 20px 0;
+    }
+    
+    &__checkbox-container {
+        display: flex;
+        align-items: center;
+        z-index: 1;
+        input {
+            margin: 0 8px 0 0;
+        }
+        span {
+            font-size: 11px;
+            color: #999999;
+            @media(max-width: 767px) {
+                text-align: left;
+            }
+            a {
+                text-decoration: underline;
+                color: #999999;
+            }
+        }
+    }
 }
