--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -1163,7 +1163,7 @@ body {
         margin: 0 auto;
     }
 
-    &__google-map {
+    &__yandex-map {
         position: absolute;
         width: 100%;
         height: 100%;
