clickable buttons, fix pulse

--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -1309,6 +1309,7 @@ body {
     line-height: 100px;
     color: #fff;
     font-size: 50px;
+    z-index: 3;
     cursor: pointer;
     &:before,
     &:after {
