--- a/#source/sass/style.scss
+++ b/#source/sass/style.scss
@@ -1154,6 +1154,7 @@ body {
         max-width: 249px;
         margin: 0 auto 22px auto;
         font-weight: 500;
+        color: #fff;
         @media(max-width: 767px) {
             max-width: 100%;
         }
